<?xml version="1.0"?>
<package format="3">
  <name>resple-to-hdmapping</name>
  <version>0.0.0</version>
  <description>bag-Resple-bag-session convert</description>

  <maintainer email="matecki.m@outlook.com">Marcin Matecki</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>pcl</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
